// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag tests should closable tag render correctly 1`] = `
<span
  className="cd-tag"
  style={Object {}}
>
  <span>
    TEST
  </span>
  <i
    className="cd-tag__close cd-icon-close"
    onClick={[Function]}
  />
</span>
`;

exports[`Tag tests should default tag render correctly 1`] = `
<span
  className="cd-tag"
  style={Object {}}
>
  <span>
    TEST
  </span>
</span>
`;

exports[`Tag tests should hit tag render correctly 1`] = `
<span
  className="cd-tag is-hit"
  style={Object {}}
>
  <span>
    TEST
  </span>
</span>
`;

exports[`Tag tests should round tag render correctly 1`] = `
<span
  className="cd-tag is-round"
  style={Object {}}
>
  <span>
    TEST
  </span>
</span>
`;

exports[`Tag tests should solid tag render correctly 1`] = `
<span
  className="cd-tag is-solid"
  style={Object {}}
>
  <span>
    TEST
  </span>
</span>
`;

exports[`Tag tests should tag with appendIcon render correctly (without label) 1`] = `
<span
  className="cd-tag"
  style={Object {}}
>
  <i
    className="cd-append-icon cd-icon-search"
  />
</span>
`;

exports[`Tag tests should tag with appendIcon render correctly 1`] = `
<span
  className="cd-tag"
  style={Object {}}
>
  <span>
    TESTE
  </span>
  <i
    className="cd-append-icon cd-icon-search"
  />
</span>
`;

exports[`Tag tests should tag with icon render correctly 1`] = `
<span
  className="cd-tag"
  style={Object {}}
>
  <i
    className="cd-icon cd-icon-search"
  />
  <span>
    TESTE
  </span>
</span>
`;

exports[`Tag tests should typed tags render correctly 1`] = `
<span
  className="cd-tag cd-tag--success"
  style={Object {}}
>
  <span>
    TEST
  </span>
</span>
`;

exports[`Tag tests should typed tags render correctly 2`] = `
<span
  className="cd-tag cd-tag--info"
  style={Object {}}
>
  <span>
    TEST
  </span>
</span>
`;

exports[`Tag tests should typed tags render correctly 3`] = `
<span
  className="cd-tag cd-tag--warning"
  style={Object {}}
>
  <span>
    TEST
  </span>
</span>
`;

exports[`Tag tests should typed tags render correctly 4`] = `
<span
  className="cd-tag cd-tag--danger"
  style={Object {}}
>
  <span>
    TEST
  </span>
</span>
`;
